# cars_sales_project

./: .gitignore  Dockerfile  Makefile  README.md  bot.py  bot_setting.py  docker-compose.yml  manage.py  pyproject.toml  setup.cfg
systemd/: tgbot.service
tgbot/: config.py
tgbot/filters/: seller_filter.py
tgbot/handlers/: admin_orders_menu.py  base.py  chat.py  chat_with_seller_and_customer.py  create_order.py  data.py  order.py  post.py  send_post.py
tgbot/handlers/menu/: admin_orders.py  data.py  languages.py
tgbot/keyboards/: admin_orders.py  admin_orders_keyboard.py  chat.py  chat_keyboard.py  create_order_keyboard.py  data.py  data_management_keyboard.py  languages.py  order.py
tgbot/locales/ar/LC_MESSAGES/: testbot.po
tgbot/locales/he/LC_MESSAGES/: testbot.po
tgbot/middlewares/: translate.py
tgbot/misc/: create_order_states.py  pagination.py
tgbot/models/: db_constants.py
tgbot/models/db_commands/: car.py  car_model.py  color.py  order.py  user.py
tgbot/services/: order_info.py  set_bot_commands.py  show_order_info.py
tgbot_django/: asgi.py  settings.py  urls.py  wsgi.py
tgbot_django/cars_sales/: admin.py  apps.py  models.py
tgbot_django/cars_sales/migrations/: 0001_initial.py  0002_alter_carmodel_description.py  0002_alter_carorder_car_brand_alter_carorder_color.py  0003_alter_carmodel_description.py  0003_remove_carorder_steering_wheel_position.py  0004_alter_carmodel_description.py  0004_carmodel_carmodelphoto_remove_carorder_car_brand_and_more.py  0005_alter_carorder_customer.py  0006_alter_carorder_seller.py
(+1 files in other folders)
