[tool.poetry]
name = "tgbot-template-master"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = []

[tool.poetry.dependencies]
python = "^3.11"
django = "^4.1.7"
aiogram = "^2.25.1"
environs = "^9.5.0"
psycopg2 = "^2.9.5"
pillow = "^9.4.0"


[tool.poetry.group.dev.dependencies]
flake8 = "^6.0.0"
autopep8 = "^2.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
